Agrega validaciones en empresas, sectores y servicios